# nr_pdsch_capture_oai

./: .gitignore  CMakeLists.txt  INTEGRATION.md  README.md  capture_config.txt
scripts/: generate_capture_video.py  plot_capture.py  read_dataset.py
src/: nr_pdsch_capture.c
